--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@kayron013/lexorank",
   "version": "1.1.0",
-  "description": "Class for utilizing LexoRanking",
+  "description": "An immutable class implementation of the LexoRank ranking system by Atlassian JIRA",
   "main": "lib/index.js",
   "types": "lib/index.d.ts",
   "files": [
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "jest",
     "build": "tsc",
-    "lint": "tsc --noEmit"
+    "lint": "tsc --noEmit",
+    "publish": "np"
   },
   "publishConfig": {
     "access": "public"
