--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "jest",
     "build": "tsc",
     "lint": "tsc --noEmit",
-    "publish": "np"
+    "publish": "npm run build && np"
   },
   "publishConfig": {
     "access": "public"
