(fix,pkg) npm script,exclud test

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -69,5 +69,5 @@
     "forceConsistentCasingInFileNames": true /* Disallow inconsistently-cased references to the same file. */
   },
   "include": ["src"],
-  "exclude": ["node_modules", "*.spec.ts"]
+  "exclude": ["node_modules", "**/*.spec.ts"]
 }
